# customer-order-service/src/main/java/com/codingchallenge/ordersystem/customerorder/order/entity/Order.java
@@ -58,11 +58,6 @@ public class Order {
     @OneToOne(mappedBy = "order", cascade = CascadeType.ALL, orphanRemoval = true)
     private PaymentMethod paymentMethod;
 
-    public void addOrderItem(OrderItem item) {
-        orderItems.add(item);
-        item.setOrder(this);
-    }
-
     public void setPaymentMethod(PaymentMethod paymentMethod) {
         this.paymentMethod = paymentMethod;
         paymentMethod.setOrder(this);
